--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,19 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Bucket4j -->
+		<dependency>
+			<groupId>com.github.vladimir-bukhtoyarov</groupId>
+			<artifactId>bucket4j-core</artifactId>
+			<version>7.3.0</version>
+		</dependency>
+
+		<!-- Spring Boot Starter AOP (Optional, for using aspects) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
